fixup inline filter input elems spacing

--- a/packages/tree-finder/style/grid/header.less
+++ b/packages/tree-finder/style/grid/header.less
@@ -41,8 +41,7 @@ thead tr:last-child th:hover {
 
 .tf-header-input {
   grid-area: input;
-  width: 98%;
-  margin-left: -5px;
+  width: calc(100% - 5px);
 }
 
 .tf-header-name {
